--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@taiga-ui/styles": "^4.12.0",
         "@taiga-ui/layout": "^4.12.0",
         "@taiga-ui/legacy": "^4.12.0",
+        "@taiga-ui/addon-commerce": "^4.12.0",
         "ng-morph": "^4.8.4",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
