--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,19 @@
 {
-  "singleQuote": true,
-  "tabWidth": 4,
-  "bracketSpacing": true,
-  "overrides": [
-    {
-      "files": "*.json",
-      "options": {
-        "singleQuote": false
-      }
-    }
-  ]
+    "singleQuote": true,
+    "tabWidth": 4,
+    "bracketSpacing": true,
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "singleQuote": false
+            }
+        },
+        {
+            "files": "*.html",
+            "options": {
+                "parser": "angular"
+            }
+        }
+    ]
 }
