--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
         "@angular/platform-browser": "~18.2.0",
         "@angular/platform-browser-dynamic": "~18.2.0",
         "@angular/router": "~18.2.0",
+        "@taiga-ui/addon-commerce": "^4.12.0",
         "@taiga-ui/cdk": "^4.12.0",
         "@taiga-ui/core": "^4.12.0",
         "@taiga-ui/event-plugins": "^4.0.2",
         "@taiga-ui/icons": "^4.12.0",
         "@taiga-ui/kit": "^4.12.0",
-        "@taiga-ui/styles": "^4.12.0",
         "@taiga-ui/layout": "^4.12.0",
         "@taiga-ui/legacy": "^4.12.0",
-        "@taiga-ui/addon-commerce": "^4.12.0",
         "ng-morph": "^4.8.4",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
@@ -35,7 +34,7 @@
         "@angular-devkit/build-angular": "~18.2.0",
         "@angular-devkit/core": "~18.2.0",
         "@angular-devkit/schematics": "~18.2.0",
-        "@angular-eslint/eslint-plugin": "^18.0.1",
+        "@angular-eslint/eslint-plugin": "^18.4.0",
         "@angular-eslint/eslint-plugin-template": "^18.0.1",
         "@angular-eslint/template-parser": "^18.0.1",
         "@angular/cli": "~18.2.0",
@@ -58,13 +57,17 @@
         "@typescript-eslint/parser": "^7.16.0",
         "@typescript-eslint/utils": "^7.16.0",
         "eslint": "~8.57.0",
-        "eslint-config-prettier": "^9.0.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-unused-imports": "^4.1.4",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-preset-angular": "~14.1.0",
         "nx": "19.7.4",
-        "prettier": "2.8.8",
+        "prettier": "^3.3.3",
+        "prettier-eslint": "^16.3.0",
         "ts-jest": "^29.1.0",
         "ts-node": "10.9.1",
         "typescript": "~5.5.2"
