--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "@taiga-ui/kit": "^4.12.0",
         "@taiga-ui/layout": "^4.12.0",
         "@taiga-ui/legacy": "^4.12.0",
+        "@taiga-ui/styles": "^4.12.0",
+        "crypto-js": "^4.2.0",
         "ng-morph": "^4.8.4",
         "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
+        "tslib": "^2.8.1",
         "zone.js": "~0.14.3"
     },
     "devDependencies": {
@@ -51,6 +53,7 @@
         "@swc-node/register": "~1.9.1",
         "@swc/core": "~1.5.7",
         "@swc/helpers": "~0.5.11",
+        "@types/crypto-js": "^4.2.2",
         "@types/jest": "^29.5.12",
         "@types/node": "18.16.9",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
