--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,37 @@
 image: node:22-alpine
-variables:
-    CI: 'true'
 
-# Main job
-CI:
-    interruptible: true
-    only:
-        - main
-        - merge_requests
+stages:
+    - install
+    - build
+    - deploy
+
+install:
+    stage: install
     script:
-        # This enables task distribution via Nx Cloud
-        # Run this command as early as possible, before dependencies are installed
-        # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-        - npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="build"
+        - npm ci
+    artifacts:
+        paths:
+            - node_modules/
 
-        - npm ci --legacy-peer-deps
-        - NX_HEAD=$CI_COMMIT_SHA
-        - NX_BASE=${CI_MERGE_REQUEST_DIFF_BASE_SHA:-$CI_COMMIT_BEFORE_SHA}
+build:
+    stage: build
+    script:
+        - npm run build
+    dependencies:
+        - install
+    artifacts:
+        paths:
+            - dist/
 
-        # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-        # - npx nx-cloud record -- echo Hello World
-        # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-        - npx nx affected --base=$NX_BASE --head=$NX_HEAD -t lint test build
+pages:
+    stage: deploy
+    only:
+        - master
+    script:
+        - echo "Deploying to GitLab Pages"
+    artifacts:
+        paths:
+            - dist/
+    dependencies:
+        - install
+        - build
