--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - master  
 
+permissions:
+  contents: write
+
 jobs:
   install:
     runs-on: ubuntu-latest
@@ -67,7 +70,6 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: build
-    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout code
