--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "@angular/platform-browser": "~18.2.0",
         "@angular/platform-browser-dynamic": "~18.2.0",
         "@angular/router": "~18.2.0",
+        "@ngrx/effects": "^18.1.1",
+        "@ngrx/store": "^18.1.1",
+        "@ngrx/store-devtools": "^18.1.1",
         "@taiga-ui/addon-commerce": "^4.12.0",
         "@taiga-ui/cdk": "^4.12.0",
         "@taiga-ui/core": "^4.12.0",
